@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: pid.test,v 1.6 2000/04/10 17:19:03 ericm Exp $
+# RCS: @(#) $Id: pid.test,v 1.7 2002/07/04 20:06:13 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -27,12 +27,13 @@ if {[info commands pid] == ""} {
 }
 
 catch {removeFile test1}
+set path(test1) [makeFile {} test1]
 
 test pid-1.1 {pid command} {
     regexp {(^[0-9]+$)|(^0x[0-9a-fA-F]+$)} [pid]
 } 1
 test pid-1.2 {pid command} {unixOrPc unixExecs} {
-    set f [open {| echo foo | cat >test1} w]
+    set f [open [format {| echo foo | cat >%s} $path(test1)] w]
     set pids [pid $f]
     close $f
     catch {removeFile test1}
@@ -41,7 +42,7 @@ test pid-1.2 {pid command} {unixOrPc unixExecs} {
        [expr {[lindex $pids 0] == [lindex $pids 1]}]
 } {2 1 1 0}
 test pid-1.3 {pid command} {
-    set f [open test1 w]
+    set f [open $path(test1) w]
     set pids [pid $f]
     close $f
     set pids
